feat: fixed logo didnt change color based on weather codes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <div class="weather-app">
             <div class="content">
                 <div id="weatherInfo">
-                    <object class="logo" data="./assets/logo-full.svg"></object>
+                    <object class="logo" data="./assets/logo-full.svg" type="image/svg+xml">
+                        <img src="./assets/logo-full.svg" alt="Breeze Weather Logo">
+                    </object>
                     <div class="card">
 
                         <div class="top">
