--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
                         <div class="top">
                             <div class="search-box">
-                                <i class="fas fa-search search-icon"></i>
+                                <i class="fas fa-location-dot"></i>
                                 <input
                                     type="text"
                                     id="cityInput"
@@ -58,21 +58,24 @@
 
                         <!-- <div class="date-today">Today, </div> -->
 
-                        <div class="bottom weather-details">
-                            <div class="detail">
-                                <i class="fas fa-wind"></i>
-                                <div>
-                                    <div class="detail-label">Wind</div>
-                                    <div class="detail-value wind-speed">-- km/h</div>
+                        <div class="bottom">
+                            <div class="weather-details">
+                                <div class="detail">
+                                    <i class="fas fa-wind"></i>
+                                    <div>
+                                        <div class="detail-label">Wind</div>
+                                        <div class="detail-value wind-speed">-- km/h</div>
+                                    </div>
+                                </div>
+                                <div class="detail">
+                                    <i class="fas fa-tint"></i>
+                                    <div>
+                                        <div class="detail-label">Humidity</div>
+                                        <div class="detail-value humidity">--%</div>
+                                    </div>
                                 </div>
                             </div>
-                            <div class="detail">
-                                <i class="fas fa-tint"></i>
-                                <div>
-                                    <div class="detail-label">Humidity</div>
-                                    <div class="detail-value humidity">--%</div>
-                                </div>
-                            </div>
+                            <span>Click the location bar to change location</span>
                         </div>
                     </div>
                 </div>
