feat: Add temperature unit conversion and dynamic UI updates

--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
                                     <div class="temperature-display">
                                         <span class="temp-value">--</span>
                                         <span class="temp-unit">°C</span>
+                                        <div class="unit-toggle">
+                                            <button class="unit-btn active" data-unit="C">°C</button>
+                                            <button class="unit-btn" data-unit="F">°F</button>
+                                        </div>
                                     </div>
                                     <div class="description">--</div>
                                     <div class="temp-range">
